[package]
name = "pallet-sandbox"
authors = ["Anonymous"]
description = "FRAME pallet to test new features"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = {  version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Local dependencies

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
sp-arithmetic.workspace = true
parachains-common.workspace = true
pallet-funding.workspace = true

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0.132" }

# Substrate
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
pallet-balances.workspace = true
pallet-insecure-randomness-collective-flip.workspace = true
pallet-assets.workspace = true


[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-funding/runtime-benchmarks",
]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-funding/std",
	"parachains-common/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-insecure-randomness-collective-flip/std",
	"sp-arithmetic/std",
	"sp-std/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-funding/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"sp-runtime/try-runtime",
]
