[package]
authors = ['Polimec Team <https://github.com/Polimec>']
description = 'Polimec traits'
edition = '2018'
license = 'Unlicense'
name = 'traits'
repository = 'https://github.com/polimec/polimec-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[features]
default = ['std']

std = ['frame-support/std', 'sp-runtime/std']